// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly CountRow Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ecebec",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#473c41",
          "fontSize": 14,
          "fontWeight": "normal",
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        },
      ]
    }
    textDecoration={false}
  >
    8
  </Text>
</View>
`;

exports[`renders correctly CountRow With long value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ecebec",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#473c41",
          "fontSize": 14,
          "fontWeight": "normal",
          "textDecorationColor": "black",
          "textDecorationLine": "line-through",
          "textDecorationStyle": "solid",
        },
      ]
    }
    textDecoration={true}
  >
    $ 10.000.000.000.000.000.000
  </Text>
</View>
`;

exports[`renders correctly CountRow With price 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ecebec",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#473c41",
          "fontSize": 14,
          "fontWeight": "normal",
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        },
      ]
    }
    textDecoration={false}
  >
    $ 10.000
  </Text>
</View>
`;

exports[`renders correctly CountRow With textdecoration prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ecebec",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#473c41",
          "fontSize": 14,
          "fontWeight": "normal",
          "textDecorationColor": "black",
          "textDecorationLine": "line-through",
          "textDecorationStyle": "solid",
        },
      ]
    }
    textDecoration={true}
  >
    $ 10.000
  </Text>
</View>
`;
